# Aura

./: .aider.chat.history.md  .aider.input.history  .aura_session.json  .gitignore  AURA_HANDOVER.md  AURA_ROADMAP.md  Aura.code-workspace  Cargo.toml  Da-ASAHI_MODELS.md  Da-HP_MODELS.md  GEMINI.md  JULES_BACKLOG.md  PINEPHONE_SUBNET_ROUTER_NOTE.md  README.md  da-hp-bootstrap.sh  da-pine-bootstrap.sh  go.mod  installer.nsi  main.go  main.py  pyproject.toml  test_argparse.py  test_script.py
.Jules/: palette.md
.aider.tags.cache.v4/: cache.db
.github/workflows/: android.yml  bolt.yml  build-apk.yml  build-windows.yml  build-xbox.yml  da-hp-iso.yml  palette.yml  proxy-download-fedora.yml  proxy-download.yml  sentinel.yml
.jules/: bolt.md  sentinel.md
DA-HP-ISO/: Dockerfile  packages.x86_64  pacman.conf  profiledef.sh
Da-HP/: Da-HP_MODELS.md  da-hp-bootstrap.sh
Da-HP/DA-HP-ISO/: build-iso.sh
Da-Pine/: da-pine-bootstrap.sh  da-pine-upgrade.sh
android/: build.gradle
android/app/: build.gradle
archive/scripts/: aura-batt-daemon.init  aura-batt-daemon.py  aura-preload.service  (+8 more)
aura_core/: engine.py
cli/: main.py
configs/: starship.toml
core/: engine.py  mandates.py
docs/: AGENTS.md  AUDIT_LOG.md  AURA_ROADMAP.md  README.md
loose_deployment/: AppxManifest.xml
memory/: MEMORY.md
mobile/: README.md
ollama/: Modelfile.aura-architect  Modelfile.aura-deepseek  Modelfile.aura-gema  Modelfile.aura-qwen
python/: aura_cli.py  aura_daemon.py  main.py
src/: main.rs
tests/: test_react.py  test_sensory_bridge.py  test_tools.py
xbox/: AppxManifest.xml
(+57 files in other folders)
